--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
@@ -47,10 +47,6 @@
 		<jsp:attribute name="content">
 			<c:set var="group" value="${command.group}" />
 			<c:choose>
-				<c:when test="${empty group and not empty command.requestedGroup}">
-					TODO: i18n<br />
-					The requested group doesn't exist or you don't have any rights to view this page.
-				</c:when>
 				<c:when test="${not empty group}">
 					<fieldset class="fsOuter">
 						<label><h2><c:out value="${group.name}" /></h2></label>
@@ -110,7 +106,6 @@
 										<c:if test="${hasJoinRequests}">
 											<bsform:fieldset legendKey="settings.group.joinRequests">
 												<jsp:attribute name="content">
-													<!-- TODO: when there are no members, show a coresponding message-->
 													<fmt:message var="decuser" key="settings.group.deny.button"/>
 													<fmt:message var="decuserTitle" key="settings.group.deny.button.title"/>
 													<fmt:message var="accuser" key="settings.group.accUser.button"/>
@@ -141,12 +136,11 @@
 										<jsp:attribute name="content">
 											<c:choose>
 												<c:when test="${groupHasMembers}">
-													<!-- TODO: when there are no members, show a coresponding message-->
 													<fmt:message var="deluser" key="settings.group.delUser.button"/>
 													<fmt:message var="deluserTitle" key="settings.group.delUser.button.title"/>
 
 													<!-- show group member list -->
-													TODO: Adapt this to maybe forms? The page will be reloaded, no matter what.<BR />
+													<!-- TODO: Adapt this to maybe forms? The page will be reloaded, no matter what. -->
 													<table class="table table-striped table-condensed">
 														<c:forEach items="${group.memberships}" var="member">
 															<c:if test="${member.groupRole ne 'DUMMY' and member.groupRole ne 'REQUESTED' and member.groupRole ne 'INVITED'}">
@@ -181,7 +175,8 @@
 													</table>
 												</c:when>
 												<c:otherwise>
-													TODO: This group has no members must be i18nized.
+													<!-- TODO: must be i18nized. -->
+													This group has no members.
 												</c:otherwise>
 											</c:choose>
 										</jsp:attribute>
@@ -265,15 +260,15 @@
 									</c:if>
 							</c:when>
 							<c:otherwise>
-								TODO: i18n<br />
+								<!-- TODO: i18n -->
 								You are not a member of this group.
 							</c:otherwise>
 						</c:choose>
 					</fieldset>
 				</c:when>
 				<c:otherwise>
-					No group requested.
-					<h2>TODO: WAT DO</h2>
+					<!-- TODO: i18n -->
+					The requested group doesn't exist or you don't have any rights to view this page.
 				</c:otherwise>
 			</c:choose>
 		</jsp:attribute>
