--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
@@ -7,21 +7,18 @@
 <jsp:root version="2.0"
 		  xmlns:jsp="http://java.sun.com/JSP/Page"
 		  xmlns:c="http://java.sun.com/jsp/jstl/core"
-		  xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
-		  xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-		  xmlns:user="urn:jsptagdir:/WEB-INF/tags/bstags/resources/user"
 		  xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
-		  xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
-		  xmlns:form="http://www.springframework.org/tags/form"
-		  xmlns:button="urn:jsptagdir:/WEB-INF/tags/bstags/buttons"
-		  xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
+		  xmlns:errors="urn:jsptagdir:/WEB-INF/tags/bstags/errors"
 		  xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
-		  xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+		  xmlns:groupsettings="urn:jsptagdir:/WEB-INF/tags/bstags/groupsettings"
+		  xmlns:settings="urn:jsptagdir:/WEB-INF/tags/bstags/settings"
 		  xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
-	<layout:paneLayout 
+	<c:set var="group" value="${command.group}" />
+	
+	<layout:tabLayout 
 		pageTitle="${postBookmarkPageTitle}" 
 		headerMessageKey="post_bookmark.heading" 
 		headerLogoClass="bookmarks" 
@@ -44,235 +41,15 @@
 			</nav:breadcrumbs>
 		</jsp:attribute>
 
-		<jsp:attribute name="content">
-			<c:set var="group" value="${command.group}" />
-			<c:choose>
-				<c:when test="${not empty group}">
-					<fieldset class="fsOuter">
-						<label><h2><c:out value="${group.name}" /></h2></label>
-						<c:set var="groupRole" value="${command.groupMembership.groupRole}" />
-						<c:choose>
-							<c:when test="${groupRole eq 'USER' || groupRole eq 'MODERATOR' || groupRole eq 'ADMINISTRATOR' }">
-									<c:if test="${groupRole eq 'ADMINISTRATOR' || groupRole eq 'MODERATOR'}">
-										<!-- Invite users -->
-										<bsform:fieldset legendKey="user.name">
-											<jsp:attribute name="content">
-												<form:form cssClass="form-horizontal" name="groupusers" method="post" action="/updateGroup?ckey=${ckey}">
-													<bsform:input path="username" helpKey="settings.group.inviteUser.help"
-																  labelKey="user.name" autocomplete="${true}"
-																  labelColSpan="3"/>
-													<input type="hidden" name="groupName" value="${group.name}"/>
-													<input type="hidden" name="operation" value="ADD_INVITED" />
-													<fmt:message var="inviteuser" key="settings.group.inviteUser.button"/>
-													<div class="col-sm-offset-3 col-sm-9">
-														<bsform:button type="submit" size="defaultSize" style="success" value="${inviteuser}" />
-													</div>
-												</form:form>
-											</jsp:attribute>
-										</bsform:fieldset>
-
-										<!-- Invited users -->
-										<!-- TODO: Fix this -->
-										<c:forEach items="${group.memberships}" var="member" varStatus="status">
-											<c:if test="${member.groupRole eq 'INVITED'}">
-												<c:set var="hasPendingInvites" value="${true}" />
-											</c:if>
-										</c:forEach>
-										<c:if test="${hasPendingInvites}">
-											<bsform:fieldset legendKey="settings.group.pendingInvites">
-												<jsp:attribute name="content">
-													<fmt:message var="revuser" key="settings.group.remInvite.button"/>
-													<fmt:message var="revuserTitle" key="settings.group.remInvite.button.title"/>
-													<table class="table table-striped table-condensed">
-														<c:forEach items="${group.memberships}" var="member">
-															<c:if test="${member.groupRole eq 'INVITED'}">
-																<tr>
-																	<td class="col-md-1"><user:thumbnail user="${member.user}" size="16" noname="${true}" /></td>
-																	<td class="col-md-3"><user:username user="${member.user}" /></td>
-																	<td class="col-md-8" style="text-align: right"><a href="/updateGroup?operation=remove_invited&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${revuserTitle}" class="btn btn-danger btn-sm">${revuser}</a></td>
-																</tr>
-															</c:if>
-														</c:forEach>
-													</table>
-												</jsp:attribute>
-											</bsform:fieldset>
-										</c:if>
-										<!-- Join requests -->
-										<c:forEach items="${group.memberships}" var="member" varStatus="status">
-											<c:if test="${member.groupRole eq 'REQUESTED'}">
-												<c:set var="hasJoinRequests" value="${true}" />
-											</c:if>
-										</c:forEach>
-										<c:if test="${hasJoinRequests}">
-											<bsform:fieldset legendKey="settings.group.joinRequests">
-												<jsp:attribute name="content">
-													<fmt:message var="decuser" key="settings.group.deny.button"/>
-													<fmt:message var="decuserTitle" key="settings.group.deny.button.title"/>
-													<fmt:message var="accuser" key="settings.group.accUser.button"/>
-													<fmt:message var="accuserTitle" key="settings.group.accUser.button.title"/>
-
-													<table class="table table-striped table-condensed">
-														<c:forEach items="${group.memberships}" var="member">
-															<c:if test="${member.groupRole eq 'REQUESTED'}">
-																<tr>
-																	<td class="col-md-1"><user:thumbnail user="${member.user}" size="16" noname="${true}" /></td>
-																	<td class="col-md-3"><user:username user="${member.user}" /></td>
-																	<td class="col-md-8" style="text-align: right"><a class="btn btn-success" href="/updateGroup?operation=accept_join_request&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${accuserTitle}">${accuser}</a> <a class="btn btn-danger" href="/updateGroup?operation=decline_join_request&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${decuserTitle}">${decuser}</a></td>
-																</tr>
-															</c:if>
-														</c:forEach>
-													</table>
-												</jsp:attribute>
-											</bsform:fieldset>
-										</c:if>
-									</c:if>
-
-									<c:forEach items="${group.memberships}" var="member">
-										<c:if test="${member.groupRole ne 'DUMMY' and member.groupRole ne 'REQUESTED' and member.groupRole ne 'INVITED'}">
-											<c:set var="groupHasMembers" value="${true}" />
-										</c:if>
-									</c:forEach>
-									<bsform:fieldset legendKey="settings.group.memberList">
-										<jsp:attribute name="content">
-											<c:choose>
-												<c:when test="${groupHasMembers}">
-													<fmt:message var="deluser" key="settings.group.delUser.button"/>
-													<fmt:message var="deluserTitle" key="settings.group.delUser.button.title"/>
-
-													<!-- show group member list -->
-													<!-- TODO: Adapt this to maybe forms? The page will be reloaded, no matter what. -->
-													<table class="table table-striped table-condensed">
-														<c:forEach items="${group.memberships}" var="member">
-															<c:if test="${member.groupRole ne 'DUMMY' and member.groupRole ne 'REQUESTED' and member.groupRole ne 'INVITED'}">
-																<tr>
-																	<td class="col-md-1"><user:thumbnail user="${member.user}" size="16" noname="${true}" /></td>
-																	<td class="col-md-3"><user:username user="${member.user}" /></td>
-																	<td class="col-md-2"><i><c:out value="${member.groupRole}" /></i></td>
-																	<td class="col-md6" style="text-align:right">
-																		<c:if test="${groupRole eq 'MODERATOR' || groupRole eq 'ADMINISTRATOR'}">
-																			<c:if test="${groupRole eq 'ADMINISTRATOR'}">
-																				<c:choose>
-																					<c:when test="${member.groupRole eq 'USER'}">
-																						<a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=moderator&amp;ckey=${ckey}">&#8593;</a>
-																						| <a class="btn btn-default disabled">&#8595;</a>
-																					</c:when>
-																					<c:when test="${member.groupRole eq 'MODERATOR'}">
-																						<a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=administrator&amp;ckey=${ckey}">&#8593;</a>
-																						| <a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=user&amp;ckey=${ckey}">&#8595;</a>
-																					</c:when>
-																					<c:when test="${member.groupRole eq 'ADMINISTRATOR'}">
-																						<a class="btn btn-default disabled">&#8593;</a>
-																						| <a class="btn btn-default" href="/updateGroup?operation=update_grouprole&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;group.groupRole=moderator&amp;ckey=${ckey}">&#8595;</a>
-																					</c:when>
-																				</c:choose>
-																			</c:if>
-																			| <a class="btn btn-danger" href="/updateGroup?operation=remove_user&amp;groupName=${mtl:encodeURI(group.name)}&amp;username=${mtl:encodeURI(member.user.name)}&amp;ckey=${ckey}" title="${deluserTitle}">${deluser}</a>
-																		</c:if>
-																	</td>
-															</tr>
-															</c:if>
-														</c:forEach>
-													</table>
-												</c:when>
-												<c:otherwise>
-													<!-- TODO: must be i18nized. -->
-													This group has no members.
-												</c:otherwise>
-											</c:choose>
-										</jsp:attribute>
-									</bsform:fieldset>
-
-									<c:if test="${groupRole == 'ADMINISTRATOR'}">
-										<!-- Basic Group Settings -->
-										<bsform:fieldset legendKey="settings.group.settings">
-											<jsp:attribute name="content">
-												<form:form id="groupSettings" cssClass="form-horizontal" method="post" action="/updateGroup">
-													<input type="hidden" name="ckey" value="${ckey}" />
-													<input type="hidden" name="groupName" value="${group.name}"/>
-													<input type="hidden" name="operation" value="update_settings" />
-
-													<div class="form-group">
-														<form:label cssClass="col-sm-3 control-label" path="privlevel">
-															<fmt:message key="settings.group.memberList" />
-														</form:label>
-
-														<div class="col-sm-9">
-															<form:select cssClass="form-control help-popover" path="privlevel">
-																<form:option value="0"><fmt:message key="settings.public" /></form:option>
-																<form:option value="1"><fmt:message key="settings.private" /></form:option>
-																<form:option value="2"><fmt:message key="settings.publicForMembers" /></form:option>
-															</form:select>
-															<div class="help help-header hide"><fmt:message key="settings.group.memberList" /></div>
-															<div class="help help-content hide"><fmt:message key="settings.group.memberList.help" /></div>
-														</div>
-													</div>
-
-													<div class="form-group">
-														<form:label cssClass="col-sm-3 control-label" path="sharedDocuments">
-															<fmt:message key="settings.group.sharedDocuments" />
-														</form:label>
-
-														<div class="col-sm-9">
-															<form:select cssClass="form-control help-popover" path="sharedDocuments">
-																<form:option value="0"><fmt:message key="settings.disabled" /></form:option>
-																<form:option value="1"><fmt:message key="settings.enabled" /></form:option>
-															</form:select>
-
-															<div class="help help-header hide"><fmt:message key="settings.group.sharedDocuments" /></div>
-															<div class="help help-content hide"><p><fmt:message key="settings.group.sharedDocuments.help" /></p></div>
-														</div>
-													</div>
-													<div class="form-group">
-														<div class="col-sm-offset-3 col-sm-9">
-															<fmt:message var="updatesettings" key="settings.updatesettings" />
-															<bsform:button type="submit" style="primary" size="defaultSize" value="${updatesettings}" />
-														</div>
-													</div>
-												</form:form>
-											</jsp:attribute>
-										</bsform:fieldset>
-
-
-										<!-- group reporting settings -->
-										<c:if test="${properties['publication.reporting.mode'] eq 'GROUP'}">
-											<bsform:fieldset legendKey="settings.group.reporting">
-												<jsp:attribute name="content">
-													<form:form cssClass="form-horizontal" id="groupSettings" method="post" action="/updateGroup">
-														<input type="hidden" name="groupName" value="${group.name}"/>
-														<input type="hidden" name="operation" value="update_group_reporting_settings" />
-														<bsform:fieldset legendKey="settings.group.reporting.mail">
-															<jsp:attribute name="content">
-																<bsform:input path="group.publicationReportingSettings.reportingMailAddress" noHelp="${true}" />
-																<bsform:textarea path="group.publicationReportingSettings.reportingMailTemplate" noHelp="${true}" rows="10" />
-															</jsp:attribute>
-														</bsform:fieldset>
-
-														<bsform:fieldset legendKey="settings.group.reporting.address">
-															<jsp:attribute name="content">
-																<bsform:input path="group.publicationReportingSettings.externalReportingUrl" noHelp="${true}" />
-															</jsp:attribute>
-														</bsform:fieldset>
-														<bsform:button size="defaultSize" style="success" value="settings.group.reporting.update" />
-													</form:form>
-												</jsp:attribute>
-											</bsform:fieldset>
-										</c:if>
-									</c:if>
-							</c:when>
-							<c:otherwise>
-								<!-- TODO: i18n -->
-								You are not a member of this group.
-							</c:otherwise>
-						</c:choose>
-					</fieldset>
-				</c:when>
-				<c:otherwise>
-					<!-- TODO: i18n -->
-					The requested group doesn't exist or you don't have any rights to view this page.
-				</c:otherwise>
-			</c:choose>
+		<jsp:attribute name="tabcontent">
+			<!-- display potential errors -->
+			<errors:global />
+			
+			<groupsettings:userlists group="${group}" />
+			<settings:profile command="${command}"/>
+			<settings:cv command="${command}" isGroup="${true}"/>
 		</jsp:attribute>
 
-	</layout:paneLayout>
+	</layout:tabLayout>
 
 </jsp:root>
