--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardBookmark.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardBookmark.jspx
@@ -2,21 +2,112 @@
 <jsp:root version="2.0" xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:jsp="http://java.sun.com/JSP/Page"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:form="http://www.springframework.org/tags/form"
+	xmlns:spring="http://www.springframework.org/tags"
 	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
-    xmlns:editBook="urn:jsptagdir:/WEB-INF/tags/bstags/actions/edit/bookmark">
-  
-    <jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
- 
-	<layout:editGoldStandardPostLayout command="${command}" requPath="${requPath}" resourceType="GoldStandardBookmark" minimizedContentWidth="${true}">
-		
-		<jsp:attribute name="generalInformation">
-			<editBook:required post="${post}" />
-		</jsp:attribute>
-       
-		<jsp:attribute name="headerExtResource">
-			<script type="text/javascript" src="${resdir}/javascript/editBookmark.js">&amp;nbsp;</script>
-		</jsp:attribute>
+	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
+	xmlns:tags="urn:jsptagdir:/WEB-INF/tags/bstags/tags"
+	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
+	xmlns:post="urn:jsptagdir:/WEB-INF/tags/bstags/post"
+	xmlns:editBook="urn:jsptagdir:/WEB-INF/tags/bstags/actions/edit/bookmark"
+	xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
+	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/bs">
+	
+	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
+	
+	<script type="text/javascript" src="/resources/javascript/editGoldStandard.js"><!-- keep me --></script>
+	
+	<input type="hidden" name="approved" />
+	
+	<layout:editPostLayout 
+		requPath="${requPath}" 
+		command="${command}" 
+		detailedInformation="${detailedInformation}"
+		resourceType="GoldStandardBookmark"
+		activeTab="post"
+		minimizedContentWidth="${true}"
+		>
 
-	</layout:editGoldStandardPostLayout>
+		<jsp:attribute name="generalInformation">
+		
+			<!--+
+				| INPUT FIELDS URL, title, description 
+				+-->
+			
+			<!-- URL -->
+			<bsform:input labelColSpan="3" inputColSpan="9" placeholder="http://" labelText="URL" path="post.resource.url" required="${true}" noHelp="${true}">
+				<jsp:attribute name="appendix">
+					<!-- publication found -->
+					<div class="hide">
+						<span class="publication-found-title"><fmt:message key="post.meta.recommended"/>: <fmt:message key="post.meta.save_as_publication"/></span>
+						<div class="publication-found-content">
+							<div id="publication-found-form-placeholder">
+								<p><fmt:message key="post.resource.bookmark_a_publication2"/></p>
+								<button class="btn btn-primary btn-xs" type="submit" name="submit"><fmt:message key="post.meta.save_as_publication" /></button>
+								<c:out value=" "/><!-- space between buttons -->
+								<button type="button" class="btn btn-default btn-xs" onclick="$('#post\\.resource\\.url').popover('hide');"><fmt:message key="box.close" /></button>
+							</div>
+						</div>
+					</div>
+				</jsp:attribute>
+			</bsform:input>
+			
+			<!-- TITLE -->
+			<fmt:message key="post.resource.title" var="title"/>
+			
+			<bsform:input labelColSpan="3" inputColSpan="9" placeholder="${title}" path="post.resource.title" required="${true}" noHelp="${true}">
+				<jsp:attribute name="appendix">
+					<div class="fsSuggestion" id="suggestion.resource.title"><!-- KEEP ME --></div>
+				</jsp:attribute>
+			</bsform:input>
+			
+			<!-- DESC -->
+			<bsform:textarea labelColSpan="3" inputColSpan="9" path="post.description" labelText="Description">
+				<jsp:attribute name="appendix">
+					<div class="fsSuggestion" id="suggestion.description"><!-- KEEP ME --></div>
+				</jsp:attribute>
+			</bsform:textarea>
+
+			<post:tagSets groups="${command.context.loginUser.groups}"/>
+			
+		</jsp:attribute>
+		<jsp:attribute name="postApproval">
+			<!-- approval checkbox -->
+			<bsform:fieldset legendKey="goldStandard.edit.approval">
+				<jsp:attribute name="content">
+					<div class="form-group">
+				   		<div class="col-sm-offset-1 col-sm-9">
+							<div class="checkbox clearfix">
+								<label>
+					          		<input type="checkbox" class="help-popover" id="approveChkBox" tabindex="2" /> <fmt:message key="goldStandard.edit.approveMsg"/>
+					          		<div class="help-header hide"><fmt:message key="goldStandard.edit.approveMsg"/></div>
+					          		<div class="help-content hide"><fmt:message key="goldStandard.edit.approveMsg.help"/></div>
+					        	</label>
+							</div>
+						</div>
+					</div>
+					
+		
+				</jsp:attribute>
+			</bsform:fieldset>
+		</jsp:attribute>
+		
+	</layout:editPostLayout>
+	<script type="text/javascript">		  
+		$('input[id=approveChkBox]').click(function(){
+			alert('clicked');
+			var checked = $(this).is(':checked');
+			alert(checked);
+			if(checked){
+				$('input[name=approved]').val(1);
+				alert('if checked '+$('input[name=approved]').val());
+			}
+			else{
+				$('input[name=approved]').val(0);
+				alert('if not checked '+$('input[name=approved]').val());
+			}
+		});		   
+	</script>
 
 </jsp:root>
