--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/groupSettings.jspx
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- 
-    Document   : groupSettings
-    Created on : 03.11.2014, 18:39:45
-    Author     : niebler
--->
 <jsp:root version="2.0"
-		  xmlns:jsp="http://java.sun.com/JSP/Page"
-		  xmlns:c="http://java.sun.com/jsp/jstl/core"
-		  xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
-		  xmlns:errors="urn:jsptagdir:/WEB-INF/tags/bstags/errors"
-		  xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
-		  xmlns:groupsettings="urn:jsptagdir:/WEB-INF/tags/bstags/groupsettings"
-		  xmlns:settings="urn:jsptagdir:/WEB-INF/tags/bstags/settings"
-		  xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
+	xmlns:jsp="http://java.sun.com/JSP/Page"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	xmlns:layout="urn:jsptagdir:/WEB-INF/tags/bstags/layout"
+	xmlns:errors="urn:jsptagdir:/WEB-INF/tags/bstags/errors"
+	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
+	xmlns:groupsettings="urn:jsptagdir:/WEB-INF/tags/bstags/groupsettings"
+	xmlns:fmt="http://java.sun.com/jsp/jstl/fmt"
+	xmlns:settings="urn:jsptagdir:/WEB-INF/tags/bstags/settings"
+	xmlns:nav="urn:jsptagdir:/WEB-INF/tags/bstags/nav">
 
 	<jsp:directive.page contentType="text/html; charset=UTF-8" language="java" pageEncoding="UTF-8" session="true" />
 
 	<c:set var="group" value="${command.group}" />
+	<fmt:message key="group.settings.header" var="groupSettingsPageTitle">
+		<fmt:param value="${group.name}" />
+	</fmt:message>
 	
-	<layout:tabLayout 
-		pageTitle="${postBookmarkPageTitle}" 
-		headerMessageKey="post_bookmark.heading" 
-		headerLogoClass="bookmarks" 
-		command="${command}" 
-		requPath="${requPath}" 
-		activeTab="settings"
-		minimizedContentWidth="${true}">
+	<layout:tabLayout pageTitle="${groupSettingsPageTitle}" headerMessageKey="post_bookmark.heading" headerLogoClass="bookmarks" command="${command}" requPath="${requPath}" activeTab="settings" minimizedContentWidth="${true}">
 
 		<jsp:attribute name="heading">
 			<parts:search pathMessageKey="navi.search" formAction="/search" formInputName="search"/>
@@ -41,9 +33,8 @@
 		<jsp:attribute name="breadcrumbs">	
 			<nav:breadcrumbs>
 				<jsp:attribute name="crumbs">
-					<nav:account />
+					<nav:groupcrumb requestedGroup="${group.name}" />
 					<nav:crumb nameKey="navi.settings" active="true" />
-					<nav:crumb nameKey="navi.group" active="true" />
 				</jsp:attribute>
 			</nav:breadcrumbs>
 		</jsp:attribute>
@@ -53,6 +44,7 @@
 			<errors:global />
 			
 			<groupsettings:profile command="${command}" />
+			
 			<groupsettings:userlists group="${group}" />
 			
 <!-- TODO: Adapt AjaxCvController to CV modification by other users (e.g. admin - - > group) -->			
