--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardBookmark.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/actions/post/editGoldStandardBookmark.jspx
@@ -10,7 +10,6 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:post="urn:jsptagdir:/WEB-INF/tags/bstags/post"
-	xmlns:editBook="urn:jsptagdir:/WEB-INF/tags/bstags/actions/edit/bookmark"
 	xmlns:bsform="urn:jsptagdir:/WEB-INF/tags/bstags/bs/form"
 	xmlns:bs="urn:jsptagdir:/WEB-INF/tags/bstags/bs">
 	
@@ -18,7 +17,7 @@
 	
 	<script type="text/javascript" src="/resources/javascript/editGoldStandard.js"><!-- keep me --></script>
 	
-	<input type="hidden" name="approved" />
+	
 	
 	<layout:editPostLayout 
 		requPath="${requPath}" 
@@ -78,12 +77,13 @@
 				<jsp:attribute name="content">
 					<div class="form-group">
 				   		<div class="col-sm-offset-1 col-sm-9">
+				   		
 							<div class="checkbox clearfix">
-								<label>
-					          		<input type="checkbox" class="help-popover" id="approveChkBox" tabindex="2" /> <fmt:message key="goldStandard.edit.approveMsg"/>
-					          		<div class="help-header hide"><fmt:message key="goldStandard.edit.approveMsg"/></div>
-					          		<div class="help-content hide"><fmt:message key="goldStandard.edit.approveMsg.help"/></div>
-					        	</label>
+								<bsform:checkbox path="approved" name="approved" labelKey="goldStandard.edit.approveMsg" helpKey="goldStandard.edit.approveMsg.help" tabindex="2">
+								
+								</bsform:checkbox>
+							
+							
 							</div>
 						</div>
 					</div>
@@ -100,12 +100,12 @@
 			var checked = $(this).is(':checked');
 			alert(checked);
 			if(checked){
-				$('input[name=approved]').val(1);
-				alert('if checked '+$('input[name=approved]').val());
+				$('input[name=kooft]').val(1);
+				alert('if checked '+$('input[name=kooft]').val());
 			}
 			else{
-				$('input[name=approved]').val(0);
-				alert('if not checked '+$('input[name=approved]').val());
+				$('input[name=kooft]').val(0);
+				alert('if not checked '+$('input[name=kooft]').val());
 			}
 		});		   
 	</script>
